syntax = "proto3";

package notifications;

service NotificationsService {
  rpc NotifyEmail (NotifyEmailMessage) returns (Empty) {}
}

message Empty {}

message NotifyEmailMessage {
  string email = 1;
  string text = 2;
  string subject = 3;
  string name = 4;
  string templatePath = 5;
  string activationCode = 6;
  message Data {
    string title = 1;
    string content = 2;
  }
  Data data = 7;
  EmailType emailType = 8;
}

enum EmailType {
  NODEMAILER = 0; // Nodemailer 사용
  MAILGUN = 1;    // Mailgun 사용
}
